--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14473,7 +14473,7 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
 }
 
 .bg-banner-four {
-  background-image: url(../images/banner/07.webp);
+  background-image: url(../images/portfolio/xuong3.JPG);
   height: 750px;
   display: flex;
   align-items: center;
@@ -16997,10 +16997,10 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
   background: #141416;
 }
 .about-right-wrapper-rour .single-right-content.bg-2 {
-  background-image: url(../images/about/07.webp);
+  background-image: url(../images/about/ongchuxuong1.JPG);
 }
 .about-right-wrapper-rour .single-right-content.bg-1 {
-  background-image: url(../images/about/06.webp);
+  background-image: url(../images/about/ongchu2.JPG);
   margin-bottom: 20px;
 }
 
