--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17278,7 +17278,7 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
 }
 
 .bg-banner-four.two {
-  background-image: url(../images/portfolio/xuong5.JPG);
+  background-image: url(../images/portfolio/xuong10.JPG);
 }
 
 .bg-banner-four.three {
@@ -17290,7 +17290,7 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
 }
 
 .bg-banner-four.five {
-  background-image: url(../images/portfolio/xuong8.JPG);
+  background-image: url(../images/portfolio/xetai1.jpg);
 }
 
 @media only screen and (max-width: 575px) {
@@ -20153,7 +20153,7 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
 }
 
 .about-right-wrapper-rour .single-right-content.bg-2 {
-  background-image: url(../images/about/ongchuxuong1.JPG);
+  background-image: url(../images/about/anh2.jpg);
 }
 
 .about-right-wrapper-rour .single-right-content.bg-1 {
